feat: Improve custom instructions system
## Baseline Prompt Improvements
- Add mandatory timestamp citations to baseline (now protected)
- Correct evidence hierarchy: Mechanistic studies > RCTs > Metabolic ward > N=1 > Epidemiology
- Emphasize biochemistry as foundational hard science
- Clarify that every claim must cite at least one source with timestamp

## Character Limit Increase
- Increase custom instructions limit from 5,000 to 10,000 characters
- Rationale: RAG context is 10-25k tokens, so 2.5k token instructions (10k chars) is proportional
- Allows detailed multi-section instructions with examples
- Updated backend API validation
- Updated frontend UI character counter

## Starter Instruction Sets
- Create 8 pre-built instruction sets for different use cases:
  1. Concise Mode - Quick, direct answers
  2. Healthcare Professional Mode - Technical terminology and mechanisms
  3. General Audience Mode - Accessible explanations with analogies
  4. Research Deep Dive Mode - Comprehensive academic-style responses
  5. Metabolic Health Focus - Emphasizes insulin resistance and metabolic conditions
  6. Carnivore Nutrition Focus - Animal-based nutrition principles
  7. Social Media Mode - Ultra-concise, quotable content
  8. Interview Prep Mode - Anticipates objections, provides multiple angles

## Files Modified
- shared/prompts/chaffee_persona.md - Improved baseline with correct evidence hierarchy
- backend/api/tuning.py - Increased character limit to 10,000
- frontend/src/components/CustomInstructionsEditor.tsx - Updated UI character counter

## Files Added
- STARTER_INSTRUCTION_SETS.md - Pre-built instruction sets with copy-paste examples

## Key Improvements
✅ Timestamp citations now mandatory (in baseline, cannot be disabled)
✅ Evidence hierarchy corrected to prioritize mechanistic biochemistry
✅ More room for detailed instructions (10k chars vs 5k)
✅ 8 ready-to-use instruction sets for different contexts
✅ Better alignment with Dr. Chaffee's actual approach (

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -49,6 +49,7 @@ services:
       - REDIS_URL=redis://redis:6379/0
       - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - NOMIC_API_KEY=${NOMIC_API_KEY}
       - YT_DLP_PATH=yt-dlp
       - FFMPEG_PATH=ffmpeg
       - WHISPER_CACHE_DIR=/tmp/whisper_cache
