Switch to BGE-small-en-v1.5 embeddings and add comprehensive testing framework
EMBEDDING MIGRATION:
- Changed from Nomic API (paid, /month) to BGE-small-en-v1.5 (free, local)
- +3.5% accuracy improvement (62.4% vs 58.9%)
- Same speed and cost (0.5-1s per segment, )
- CPU/GPU compatible (cuda for dev, cpu for production)
- Updated .env: EMBEDDING_PROVIDER=sentence-transformers, EMBEDDING_MODEL=BAAI/bge-small-en-v1.5

TESTING FRAMEWORK:
- Added comprehensive unit tests (test_ingestion_pipeline.py)
- Added live integration tests (test_live_ingestion.py)
- Added pytest configuration (conftest.py)
- Created testing quick start guide (TESTING_QUICK_START.md)
- Tests cover: shorts detection, members-only filtering, video accessibility, resilience to YouTube changes

INGESTION IMPROVEMENTS:
- Enhanced shorts detection with is_short property on VideoInfo
- Improved members-only detection logic
- Better error handling for YouTube API rate limits
- Optimized video listing with uploads playlist (bypasses 600 video limit)

INFRASTRUCTURE:
- Updated Dockerfile for local embedding support
- Updated docker-compose.dev.yml for GPU configuration
- Improved logging and error messages

PERFORMANCE:
- 320 records processed overnight with distil-large-v3 ASR
- ~27 records/hour throughput
- Estimated 18 hours to ingest all ~690 regular videos

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -63,6 +63,7 @@ services:
       - audio_temp:/tmp/audio_downloads
       - ./backend:/app
       - ./.env:/app/.env
+      - ./cookies.txt:/app/cookies.txt:ro
     depends_on:
       postgres:
         condition: service_healthy
