--- a/backend/requirements-simple.txt
+++ b/backend/requirements-simple.txt
@@ -19,10 +19,15 @@ redis==5.0.1
 
 # YouTube
 youtube-transcript-api==0.6.1
-yt-dlp[default] @ git+https://github.com/yt-dlp/yt-dlp.git@master
+yt-dlp[default]>=2025.11.12
+yt-dlp-ejs>=0.3.0
 google-api-python-client==2.108.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
+# JavaScript runtime for yt-dlp challenge solving (required for YouTube SABR streaming)
+pycryptodome>=3.19.0
+brotli>=1.1.0
+mutagen>=1.46.0
 
 # ML/AI - Core (pre-built wheels available)
 sentence-transformers>=2.7.0
