--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -91,6 +91,7 @@ services:
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000
       - DATABASE_URL=postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-password}@postgres:5432/${POSTGRES_DB:-askdrchaffee}
+      - APP_PASSWORD=${APP_PASSWORD}
     volumes:
       - ./frontend:/app
       - /app/node_modules
