--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -14,6 +14,9 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.18  # Required for file upload endpoints (updated for security)
 
 # Embeddings (BGE-small for search queries)
+# Use CPU-only PyTorch to avoid 2.5GB of CUDA dependencies (Render has no GPU)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch>=2.0.0
 sentence-transformers>=2.2.0  # Lightweight model for /embed endpoint
 
 # HTTP client for API calls
