--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["python311", "nodejs_22"]
+nixPkgs = ["python311"]
 
 [phases.install]
 cmds = ["cd backend && pip install -r requirements.txt"]
+
+[phases.build]
+cmds = []
 
 [start]
 cmd = "cd backend && uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
