--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,11 @@
-[phases.setup]
-nixPkgs = ["python311"]
+[providers]
+python = "3.11"
 
 [phases.install]
-cmds = ["cd backend && pip install -r requirements.txt"]
+cmds = ["cd backend && python3 -m pip install -r requirements.txt"]
 
 [phases.build]
 cmds = []
 
 [start]
-cmd = "cd backend && uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "cd backend && python3 -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
