--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,11 @@
-[providers]
-python = "3.11"
-
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
+nixPkgs = ["python311"]
 
 [phases.install]
-cmds = ["cd backend && python3 -m pip install -r requirements.txt"]
+cmds = ["cd backend && pip install -r requirements.txt"]
 
 [phases.build]
 cmds = []
 
 [start]
-cmd = "cd backend && python3 -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "cd backend && uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
