feat: optimize backend for CPU-only production deployment on Hetzner + Coolify
- Create requirements-production.txt with minimal CPU-only dependencies
- Remove GPU/ASR/diarization packages from production build
- Optimize Dockerfile: use CPU-only PyTorch, reduce image size
- Enhance /health endpoint: check database and embedding service
- Update Dockerfile HEALTHCHECK to query /health endpoint
- Add EXPOSE 8000 for Coolify reverse proxy
- Update frontend environment variables (add NEXT_PUBLIC_BACKEND_URL)
- Create .env.production.example for production configuration
- Rewrite DEPLOYMENT.md: complete Hetzner + Coolify guide
- Update GitHub Actions: remove Railway, add Coolify notes
- Add DEPLOYMENT_CLEANUP_SUMMARY.md: comprehensive change summary

Production deployment ready for Hetzner VPS with Coolify orchestration.
Cost estimate: ~€18/month (~\/month) for production setup.

--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -1,38 +1,37 @@
 # =============================================================================
-# DR. CHAFFEE AI - FRONTEND CONFIGURATION (LOCAL DEVELOPMENT)
+# DR. CHAFFEE AI - FRONTEND CONFIGURATION (PRODUCTION)
 # =============================================================================
-# Copy this file to .env.local for local development
-# For production, see .env.production.example
+# For production deployment on Vercel/Netlify/Render
+# Set these as environment variables in your hosting platform
 
 # =============================================================================
 # BACKEND API URL (CRITICAL)
 # =============================================================================
-# Local development: http://localhost:8000
-# Production: https://your-backend-domain.com
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+# Your production backend URL (Hetzner + Coolify deployment)
+# Example: https://api.askdrchaffee.com
+NEXT_PUBLIC_BACKEND_URL=https://your-backend-domain.com
 
 # =============================================================================
 # DATABASE (for Next.js API routes)
 # =============================================================================
-# PostgreSQL connection string (same as backend)
-DATABASE_URL=postgresql://user:password@localhost:5432/askdrchaffee
+# PostgreSQL connection string (managed PostgreSQL on Hetzner or external)
+# Example: postgresql://user:pass@postgres.internal:5432/askdrchaffee
+DATABASE_URL=postgresql://user:password@host:5432/askdrchaffee
 
 # =============================================================================
 # OPENAI (for answer generation via Next.js API routes)
 # =============================================================================
 # OpenAI API key for answer generation
-OPENAI_API_KEY=sk-proj-your_key_here
+OPENAI_API_KEY=sk-proj-your_production_key_here
 
-# Model: gpt-4o-mini (recommended), gpt-3.5-turbo, gpt-4o
+# Model: gpt-4o-mini (recommended for production)
 SUMMARIZER_MODEL=gpt-4o-mini
 
 # =============================================================================
 # BACKEND API INTEGRATION (for Next.js API routes)
 # =============================================================================
-# Backend API URL for server-side calls (Next.js API routes)
-# Local: http://localhost:8000
-# Production: https://your-backend-domain.com
-BACKEND_API_URL=http://localhost:8000
+# Backend API URL for server-side calls (same as NEXT_PUBLIC_BACKEND_URL)
+BACKEND_API_URL=https://your-backend-domain.com
 
 # =============================================================================
 # ANSWER SETTINGS
@@ -43,10 +42,27 @@ ANSWER_TOPK=100
 # Default answer style: 'concise' or 'detailed'
 ANSWER_STYLE_DEFAULT=concise
 
+# Answer cache TTL in hours (14 days = 336 hours)
+ANSWER_CACHE_TTL_HOURS=336
+
 # =============================================================================
 # AUTHENTICATION (optional)
 # =============================================================================
-# Simple password for admin features (optional for local dev)
-APP_PASSWORD=
+# Simple password for admin features (leave empty to disable)
+APP_PASSWORD=your_secure_production_password
 
+# =============================================================================
+# RATE LIMITING (optional)
+# =============================================================================
+# Rate limits per minute per IP
+RATE_LIMIT_CONCISE=10
+RATE_LIMIT_DETAILED=3
 
+# =============================================================================
+# MONITORING (optional)
+# =============================================================================
+# Enable answer caching
+ANSWER_ENABLED=true
+
+# Node environment
+NODE_ENV=production
