--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -42,25 +42,19 @@ jobs:
           black --check backend/
         continue-on-error: true
   
-  deploy:
-    name: Deploy to Railway
+  # Deployment is handled by Coolify via webhook
+  # This workflow only runs tests and quality checks
+  # Coolify auto-deploys on push to main branch
+  
+  notify:
+    name: Notify Deployment
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/main'
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-      
-      - name: Deploy to Railway
-        run: railway up --service backend
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-      
-      - name: Notify deployment
-        if: success()
+      - name: Deployment notification
         run: |
-          echo "✅ Backend deployed successfully!"
-          echo "URL: https://api.askdrchaffee.com"
+          echo "✅ Tests passed! Coolify will auto-deploy backend."
+          echo "Monitor deployment: https://coolify.your-domain.com"
+          echo "Health check: https://api.askdrchaffee.com/health"
