--- a/backend/requirements-production.txt
+++ b/backend/requirements-production.txt
@@ -33,9 +33,11 @@ psutil==5.9.6
 # WEB API
 # ============================================================================
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0  # Plain uvicorn (NOT [standard]) - avoids NumPy 2.x conflicts
 python-multipart==0.0.18
 aiofiles==23.2.1
+click==8.1.7
+h11==0.14.0
 
 # ============================================================================
 # EMBEDDINGS (installed AFTER PyTorch in Dockerfile)
@@ -47,14 +49,26 @@ tokenizers==0.15.0
 huggingface-hub==0.19.4
 safetensors==0.4.1
 regex==2023.10.3
-requests==2.31.0
 filelock==3.13.1
 packaging==23.2
+requests==2.31.0
+urllib3==2.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.6
 
 # ============================================================================
 # OPENAI (for answer generation)
 # ============================================================================
 openai==1.3.0
+anyio==3.7.1
+sniffio==1.3.0
+httpx==0.25.2
+httpcore==1.0.2
+pydantic==2.5.2
+pydantic-core==2.14.5
+typing-extensions==4.9.0
+distro==1.8.0
 
 # ============================================================================
 # EXCLUDED FROM PRODUCTION
