fix: eliminate NumPy dependency from embedding pipeline
Changes:
1. embeddings.py: Rewrite _generate_local_embeddings to use PyTorch tensors
   - Use convert_to_tensor=True, convert_to_numpy=False
   - Convert to list via .detach().cpu().tolist() (no NumPy)
   - Apply same fix to OOM retry path
   - Remove numpy import from new service wrapper

2. requirements-production.txt: Add NumPy 1.x constraint documentation
   - Document that NumPy 2.x breaks PyTorch 2.1.2
   - Add manual install instructions with numpy<2.0.0

3. api/main.py: Improve startup warmup error logging
   - Use logger.exception() instead of logger.warning()
   - Provides full stack trace for debugging
   - Success message only logged on success

Result: Embedding pipeline no longer depends on NumPy at runtime

--- a/backend/requirements-production.txt
+++ b/backend/requirements-production.txt
@@ -9,6 +9,8 @@
 # NUMPY (MUST BE FIRST - installed in Dockerfile before PyTorch)
 # ============================================================================
 # numpy==1.24.3  # Installed first in Dockerfile, compatible with torch 2.1.2
+# CRITICAL: NumPy 2.x breaks PyTorch 2.1.2 - always use NumPy 1.x
+# If installing manually: pip install "numpy<2.0.0"
 
 # ============================================================================
 # PYTORCH CPU-ONLY (installed in Dockerfile after NumPy)
