fix: harmonize NumPy constraints and improve warmup logging
Changes:
1. backend/requirements-simple.txt: Fix dangerous numpy>=2.0.0 constraint
   - Changed to numpy<2.0.0 (same as other requirements files)
   - NumPy 2.x breaks PyTorch/sentence-transformers

2. backend/api/main.py: Use try/except/else pattern for warmup
   - Success message only in else block (never on failure)
   - Removed unused exception variable bindings
   - Cleaner control flow

All NumPy constraints now harmonized across requirements files:
- backend/requirements-production.txt: numpy<2.0.0 ✓
- backend/requirements-simple.txt: numpy<2.0.0 ✓
- backend/requirements.txt: numpy==1.26.4 ✓
- requirements-production.txt (root): numpy>=1.24.3,<2.0.0 ✓

--- a/backend/requirements-simple.txt
+++ b/backend/requirements-simple.txt
@@ -6,7 +6,7 @@ psycopg2-binary>=2.9.9
 alembic>=1.13.0
 sqlalchemy>=2.0.07
 python-dotenv==1.0.0
-numpy>=2.0.0
+numpy<2.0.0  # CRITICAL: NumPy 2.x breaks PyTorch/sentence-transformers
 tqdm==4.66.1
 
 # Web API
