--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,17 @@
 # =============================================================================
-# DR. CHAFFEE AI - BACKEND CONFIGURATION EXAMPLE
+# DR. CHAFFEE AI - BACKEND CONFIGURATION
 # =============================================================================
-# Copy this file to .env and fill in your actual values
+# For local development: Copy this file to .env and fill in your actual values
+# For production (Coolify): Set these as Environment Variables in the backend app settings
+# =============================================================================
 
 # =============================================================================
-# DATABASE
+# DATABASE (Required)
 # =============================================================================
 # PostgreSQL connection string with pgvector extension
-DATABASE_URL=postgresql://user:password@host:5432/database
+# Local: postgresql://postgres:password@localhost:5432/askdrchaffee
+# Production: Set via Coolify environment variables
+DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
 
 # =============================================================================
 # YOUTUBE
