--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,52 +1,78 @@
 # =============================================================================
-# DR. CHAFFEE AI - FRONTEND CONFIGURATION (LOCAL DEVELOPMENT)
+# DR. CHAFFEE AI - FRONTEND ENVIRONMENT VARIABLES
 # =============================================================================
 # Copy this file to .env.local for local development
-# For production, see .env.production.example
+# In production (Coolify), set these as Environment Variables in the app settings
+# =============================================================================
 
 # =============================================================================
-# BACKEND API URL (CRITICAL)
+# BACKEND API (Required)
 # =============================================================================
-# Local development: http://localhost:8000
-# Production: https://your-backend-domain.com
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+# URL to the FastAPI backend service
+# Local development: http://localhost:8001
+# Production: Set to your deployed backend URL (e.g., https://drchaffee-backend.onrender.com)
+BACKEND_API_URL=http://localhost:8001
 
 # =============================================================================
-# DATABASE (for Next.js API routes)
+# DATABASE (Required for server-side API routes)
 # =============================================================================
-# PostgreSQL connection string (same as backend)
-DATABASE_URL=postgresql://user:password@localhost:5432/askdrchaffee
+# PostgreSQL connection string with pgvector extension
+# Local: postgresql://postgres:password@localhost:5432/askdrchaffee
+# Production: Set via Coolify environment variables
+DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
 
 # =============================================================================
-# OPENAI (for answer generation via Next.js API routes)
+# OPENAI API (Required for answer generation)
 # =============================================================================
-# OpenAI API key for answer generation
-OPENAI_API_KEY=sk-proj-your_key_here
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-proj-your-openai-key-here
 
-# Model: gpt-4o-mini (recommended), gpt-3.5-turbo, gpt-4o
+# Model for answer generation
+# Options: gpt-4o-mini (fast, cheap), gpt-4o (expensive, best quality)
 SUMMARIZER_MODEL=gpt-4o-mini
-
-# =============================================================================
-# BACKEND API INTEGRATION (for Next.js API routes)
-# =============================================================================
-# Backend API URL for server-side calls (Next.js API routes)
-# Local: http://localhost:8000
-# Production: https://your-backend-domain.com
-BACKEND_API_URL=http://localhost:8000
 
 # =============================================================================
 # ANSWER SETTINGS
 # =============================================================================
-# Number of context chunks to retrieve for answer generation
+# Enable/disable AI answer generation
+ANSWER_ENABLED=true
+
+# Number of chunks to retrieve for context
 ANSWER_TOPK=100
 
-# Default answer style: 'concise' or 'detailed'
+# Cache TTL in hours (336 = 14 days)
+ANSWER_TTL_HOURS=336
+ANSWER_CACHE_TTL_HOURS=336
+
+# Default answer style: concise or detailed
 ANSWER_STYLE_DEFAULT=concise
 
+# Max clips per style (to control token usage)
+MAX_CLIPS_CONCISE=30
+MAX_CLIPS_DETAILED=100
+
 # =============================================================================
-# AUTHENTICATION (optional)
+# RATE LIMITING
 # =============================================================================
-# Simple password for admin features (optional for local dev)
+# Requests per minute per style
+RATE_LIMIT_CONCISE=10
+RATE_LIMIT_DETAILED=3
+
+# =============================================================================
+# SEARCH SETTINGS
+# =============================================================================
+# Enable reranking for better search quality
+RERANK_ENABLED=false
+
+# =============================================================================
+# AUTHENTICATION (Optional)
+# =============================================================================
+# Simple password protection for the frontend
+# Leave empty to disable password protection
 APP_PASSWORD=
 
-
+# =============================================================================
+# DEVELOPMENT
+# =============================================================================
+# Set by Next.js automatically, but can be overridden
+# NODE_ENV=development
