--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,53 +1,42 @@
-# ============================================================================
+# =============================================================================
 # DR. CHAFFEE AI - FRONTEND LOCAL DEVELOPMENT
-# ============================================================================
+# =============================================================================
 # Copy this to .env.local for local development
-# ============================================================================
+# See .env.example for full documentation of all variables
+# =============================================================================
 
-# ============================================================================
-# DATABASE (for answer caching)
-# ============================================================================
-# Production database (for testing with real data)
-DATABASE_URL=postgresql://drchaffee_db_user:R3shsw9dirMQQcnO8hFqO9L0MU8OSV4t@dpg-d3o0evc9c44c73cep47g-a.frankfurt-postgres.render.com/drchaffee_db
-
-# Or use local PostgreSQL:
-# DATABASE_URL=postgresql://localhost:5432/drchaffee_local
-
-# ============================================================================
-# BACKEND API
-# ============================================================================
+# =============================================================================
+# BACKEND API (Required)
+# =============================================================================
 # Local backend (if running backend locally)
 BACKEND_API_URL=http://localhost:8001
 
 # Or use production backend for testing:
 # BACKEND_API_URL=https://drchaffee-backend.onrender.com
 
-# Embedding service (same as backend)
-EMBEDDING_SERVICE_URL=http://localhost:8001
+# =============================================================================
+# DATABASE (Required)
+# =============================================================================
+# Local PostgreSQL:
+DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
 
-# ============================================================================
-# OPENAI API (FALLBACK RAG)
-# ============================================================================
-# Get your OpenAI API key from: https://platform.openai.com/api-keys
+# =============================================================================
+# OPENAI API (Required for answer generation)
+# =============================================================================
 OPENAI_API_KEY=sk-proj-your-openai-key-here
-SUMMARIZER_MODEL=gpt-4o
+SUMMARIZER_MODEL=gpt-4o-mini
 
-# ============================================================================
+# =============================================================================
 # ANSWER SETTINGS
-# ============================================================================
+# =============================================================================
 ANSWER_ENABLED=true
-ANSWER_TOPK=50
+ANSWER_TOPK=100
 ANSWER_TTL_HOURS=336
 ANSWER_CACHE_TTL_HOURS=336
 ANSWER_STYLE_DEFAULT=concise
 
-# ============================================================================
-# AUTHENTICATION (OPTIONAL)
-# ============================================================================
-APP_PASSWORD=dev-password
-
-# ============================================================================
-# DEVELOPMENT
-# ============================================================================
-# Next.js dev mode
-NODE_ENV=development
+# =============================================================================
+# AUTHENTICATION (Optional)
+# =============================================================================
+# Leave empty to disable password protection
+APP_PASSWORD=
