refactor: move stats endpoint to backend, frontend becomes thin proxy
- Add GET /stats and /api/stats endpoints to FastAPI backend
  - Uses existing psycopg2 DB connection pattern
  - Returns segment counts, video counts, embedding coverage
  - Includes safe defaults on error

- Refactor frontend /api/stats to thin proxy
  - Removes direct Postgres connection (Pool, pg, DATABASE_URL)
  - Calls backend /stats via BACKEND_API_URL
  - Preserves 5-minute cache headers

- Update environment documentation
  - DATABASE_URL now optional for frontend (only for answer caching)
  - Stats exclusively come from backend via BACKEND_API_URL
  - Clarified in .env.example and .env.local.example

Architecture: Browser → Next.js /api/stats → Backend /stats → Postgres
Fixes ECONNREFUSED errors in local dev when frontend tries direct DB access

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -14,12 +14,15 @@
 BACKEND_API_URL=http://localhost:8001
 
 # =============================================================================
-# DATABASE (Required for server-side API routes)
+# DATABASE (Optional - only for answer caching)
 # =============================================================================
 # PostgreSQL connection string with pgvector extension
+# Note: Stats and search now come from the backend via BACKEND_API_URL.
+# DATABASE_URL is only needed for frontend-side answer caching.
+# In production, the backend handles all primary database access.
 # Local: postgresql://postgres:password@localhost:5432/askdrchaffee
-# Production: Set via Coolify environment variables
-DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
+# Production: Set via Coolify environment variables (if using frontend caching)
+# DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
 
 # =============================================================================
 # OPENAI API (Required for answer generation)
