--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -15,10 +15,13 @@ BACKEND_API_URL=http://localhost:8001
 # BACKEND_API_URL=https://drchaffee-backend.onrender.com
 
 # =============================================================================
-# DATABASE (Required)
+# DATABASE (Optional - only for answer caching)
 # =============================================================================
-# Local PostgreSQL:
-DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
+# Note: Stats now come from the backend /stats endpoint via BACKEND_API_URL.
+# DATABASE_URL is only needed if you want local answer caching in the frontend.
+# In production, the backend handles all database access.
+# Local PostgreSQL (optional):
+# DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
 
 # =============================================================================
 # OPENAI API (Required for answer generation)
